[package]
name = "prime_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[profile.tiny]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false
